--- a/nav.css
+++ b/nav.css
@@ -1,4 +1,4 @@
-ul li {
+ul{
 display: inline-block;  /*this value called in-line block which allows us to create a box with an item that is in line with other elements */
 border-style: solid blue;
 width: 150px;
