--- a/nav.css
+++ b/nav.css
@@ -1,10 +1,9 @@
 ul{
-display: inline-block;  /*this value called in-line block which allows us to create a box with an item that is in line with other elements */
-border-style: solid blue;
+display: inline;  
 width: 150px;
 list-style-type: none;
-padding: 15px 15px 15px 25px;
-margin-top: 0;  /*This keeps the navigation bar on the top of the screen by saying we want 0 distance from the top of the browser */
+padding: 15px;
+margin-top: 0;  
 margin-left: 10px;
     background-color:blue;
     opacity:0.3;
