--- a/nav.css
+++ b/nav.css
@@ -1,9 +1,12 @@
-ul{
-display: inline;  
+
+ul li {
+display: inline; /*here we are seeing another value inline that allows us to keep all menu items in line */
+border: none;
+text-decoration: underline;
+text-align: center;
+width: 150px;
 list-style-type: none;
-padding: 15px;
-margin-top: 0;  
-margin-left: 10px;
-    background-color:blue;
-    opacity:0.3;
+padding: 35px 35px 35px 35px;
+margin-top: 0;
+margin-left: 20px;
 }
