--- a/nav.css
+++ b/nav.css
@@ -1,5 +1,5 @@
 
-ul li {
+body{
 display: inline; /*here we are seeing another value inline that allows us to keep all menu items in line */
 border: none;
 text-decoration: underline;
