--- a/nav.css
+++ b/nav.css
@@ -1,12 +1,15 @@
 
 body{
-display: inline; /*here we are seeing another value inline that allows us to keep all menu items in line */
-border: none;
-text-decoration: underline;
-text-align: center;
-width: 150px;
-list-style-type: none;
-padding: 35px 35px 35px 35px;
-margin-top: 0;
-margin-left: 20px;
+margin: 0;
+  padding: 0;
+  font-family: 'Arial', serif;
 }
+
+.nav {
+  background-color; #595959
+  color; #ffffff;
+  list-style: none;
+  text-align: center;
+  padding: 20px 0 20px 0
+}
+  
