--- a/nav.css
+++ b/nav.css
@@ -10,6 +10,6 @@ margin: 0;
   color; #ffffff;
   list-style: none;
   text-align: center;
-  padding: 20px 0 20px 0
+  padding: 20px 0 20px 0;
 }
   
