--- a/nav.css
+++ b/nav.css
@@ -1,6 +1,5 @@
-
 body{
-margin: 0;
+  margin: 0;
   padding: 0;
   font-family: 'Arial', serif;
 }
@@ -15,5 +14,5 @@ margin: 0;
   
 .nav > li {
   display: inline-block;
-  padding-right: 50px;
+  padding-right: 0 25px 0 25px;
 }
