--- a/nav.css
+++ b/nav.css
@@ -16,3 +16,8 @@ body{
   display: inline-block;
   padding-right: 0 25px 0 25px;
 }
+
+.nav > li > a {
+  text-decoration: none;
+  color: ffffff;
+}
