--- a/nav.css
+++ b/nav.css
@@ -5,8 +5,8 @@ body {
 }
 
 .nav {
-  background-color; #595959
-  color; #ffffff;
+  background-color: #595959;
+  color: #ffffff;
   list-style: none;
   text-align: center;
   padding: 20px 0 20px 0;
