--- a/nav.css
+++ b/nav.css
@@ -5,7 +5,7 @@ body {
 }
 
 .nav {
-  background-color: blue;
+  background-color: white;
   color: #ffffff;
   list-style: none;
   text-align: center;
