--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ ul {
 }
 
 ul li {
-    float: center;
+    float: left;
     width: 200px;
     height: 40px;
     background-color: black;
@@ -19,7 +19,7 @@ ul li {
     line-height: 40px;
     text-align: center;
     font-size: 20px;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 ul li a {
     text-decoration: none;
