--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
     font-family: sans-serif;
     color: darkgrey; 
 }
-ul {
+.nav ul {
    margin: 2px;
     padding: 2px;
     list-style: none;    
 }
 
-ul li {
+.nav ul li {
     float: left;
     width: 200px;
     height: 40px;
@@ -21,17 +21,17 @@ ul li {
     font-size: 20px;
     margin-right: 5px;
 }
-ul li a {
+.nav ul li a {
     text-decoration: none;
     color: white;
     display: block;
 }
-ul li a:hover {
+.nav ul li a:hover {
     background-color: aqua; 
 }
-ul li ul li {
+.nav ul li ul li {
     display: none;
 }
-ul li:hover ul li{
+.nav ul li:hover ul li{
     display: block;
 }
