--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     list-style: none;    
 }
 
-.nav ul li {
+nav ul li {
     float: left;
     width: 200px;
     height: 40px;
@@ -21,17 +21,17 @@ body {
     font-size: 20px;
     margin-right: 5px;
 }
-.nav ul li a {
+nav ul li a {
     text-decoration: none;
     color: white;
     display: block;
 }
-.nav ul li a:hover {
+nav ul li a:hover {
     background-color: aqua; 
 }
-.nav ul li ul li {
+nav ul li ul li {
     display: none;
 }
-.nav ul li:hover ul li{
+nav ul li:hover ul li{
     display: block;
 }
