--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
     font-family: sans-serif;
     color: darkgrey; 
 }
-.nav ul {
+ul {
    margin: 0px;
     padding: 0px;
     list-style: none;    
 }
 
-nav ul li {
+ul li {
     float: left;
     width: 200px;
     height: 40px;
@@ -21,17 +21,17 @@ nav ul li {
     font-size: 20px;
     margin-right: 5px;
 }
-nav ul li a {
+ul li a {
     text-decoration: none;
     color: white;
     display: block;
 }
-nav ul li a:hover {
+ul li a:hover {
     background-color: aqua; 
 }
-nav ul li ul li {
+ul li ul li {
     display: none;
 }
-nav ul li:hover ul li{
+ul li:hover ul li{
     display: block;
 }
