--- a/nav.css
+++ b/nav.css
@@ -35,3 +35,17 @@ body {
 .nav ul li:hover ul li{
     display: block;
 }
+
+@media screen and (min-width:600px) {
+    .nav li {
+        width: 120px;
+        border-bottom: none;
+        height: 50px;
+        line-height: 50px;
+        font-size: 1.4em; 
+    }
+    .nav li {
+        display: inline-block;
+        margin-right: -4px;
+    }
+}
