--- a/style.css
+++ b/style.css
@@ -1,37 +1,7 @@
-body {
-    background: url('background.jpg') no-repeat;
-    background-size; cover; 
-    font-family: sans-serif;
-    color: darkgrey; 
-}
-.nav ul {
-   margin: 0px;
-    padding: 0px;
-    list-style: none;    
-}
-
-.nav ul li {
-    float: left;
-    width: 200px;
-    height: 40px;
-    background-color: black;
-    opacity: .8;
-    line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    margin-right: 5px;
-}
-.nav ul li a {
-    text-decoration: none;
-    color: white;
-    display: block;
-}
-.nav ul li a:hover {
-    background-color: aqua; 
-}
-.nav ul li ul li {
-    display: none;
-}
-.nav ul li:hover ul li{
-    display: block;
+div {
+    width: 600px;
+    height: 200px;
+    padding: 15px;
+    border: 10px none;
+    margin: 20px auto;
 }
