--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ h2 {text-align: left;}
 p1::first-letter {color: deeppink}
 
 .paragraph{
-    width: 600px;
-    height: 600px;
-    padding: 15px;
-    border: 10px none;
-    margin: 20px auto;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border: none;
+    margin: 10px auto;
 }
