--- a/main2.css
+++ b/main2.css
@@ -7,7 +7,7 @@ html {
     font-family: "helvetica neue", sns-serif; 
 }
 .nav {
-    border-bottom: 1px solid #EAEAB;
+    border-bottom: 1px solid #EAEAEB;
     text-align: right;
     height: 70px;
     line-height: 70px;
