--- a/main2.css
+++ b/main2.css
@@ -20,7 +20,7 @@ html {
     text-decoration: none;
     color: blue;
     margin: 0 10px;
-    line-height: 70px
+    line-height: 70px;
 }
 
 label {
