--- a/main2.css
+++ b/main2.css
@@ -12,10 +12,10 @@ html {
     height: 70px;
     line-height: 70px;
 }
-.menue {
+.menu {
     margin: 0 30px 0 0;
 }
-.menue a {
+.menu a {
     clear: right;
     text-decoration: none;
     color: blue;
