--- a/main2.css
+++ b/main2.css
@@ -40,7 +40,7 @@ label {
         display: block;
         cursor: pointer;
     }
-    .menue {
+    .menu {
         text-align: center;
         width: 100%;
         display: none;
