--- a/main2.css
+++ b/main2.css
@@ -25,7 +25,7 @@ html {
 
 label {
     margin: 0 40px 0 0;
-    ont-size: 26px;
+    font-size: 26px;
     line-height: 70px;
     display: none;
     width: 26px;
@@ -35,7 +35,7 @@ label {
     display: none;
 }
 
-@media only screen and (max-width:500px) {
+@media only screen and (max-width: 500px) {
     label{
         display: block;
         cursor: pointer;
