--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'poppins, sans-serif;
+    font-family: 'poppins', sans-serif;
 }
 header{
     background: #2656D5;
