--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main {
 }
 
 footer {
-    background-image: url(/islt_7310/images/plant.jpg); 
+    background-image: url(/islt_7310/images/backfooter.jpg); 
     background-size: cover;
     background-repeat: no-repeat;
     font-family: SpaceMono;
