--- a/nav.css
+++ b/nav.css
@@ -1,6 +1,6 @@
 body {
     background: url('background.jpg') no-repeat;
-    background-size; cover; 
+    background-size: cover; 
     font-family: sans-serif;
     color: darkgrey; 
 }
