--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p, ul, blockquote {
 
 .heading {
     font-family: BioRhymeBold; 
-    color: #5A8298;
+    color: #FFFFFF;
     text-align: center;
     padding: 15px 1.5625%;
     width: 96.875%;
