--- a/nav.css
+++ b/nav.css
@@ -4,20 +4,14 @@ body {
     font-family: sans-serif;
     color: darkgrey; 
 }
-.navul {
-    list-style: none;
-    text-align: left;
-    padding-bottom: 0px;
-    display: flex; 
-    flex-direction: row;
-    float: right;
-    padding: 20px;margin: 0px;
+.nav ul {
+    margin: 0px;
     padding: 0px;
     list-style: none;    
 }
 
-.navul > li {
-    float: right;
+.nav ul li {
+    float: left;
     width: 200px;
     height: 40px;
     background-color: black;
@@ -27,18 +21,18 @@ body {
     font-size: 20px;
     margin-right: 5px;
 }
-.navul > li > a {
+.nav ul li a {
     text-decoration: none;
     color: white;
     display: block;
 }
-.navul > li > a:hover {
+.nav ul li a:hover {
     background-color: aqua; 
 }
-.navul > li > ul > li {
+.nav ul li ul li {
     display: none;
 }
-.navul li:hover ul li{
+.nav ul li:hover ul li{
     display: block;
 }
 
