--- a/style.css
+++ b/style.css
@@ -124,7 +124,19 @@ footer {
     grid-column: col 2 / span 1;
     grid-row: row 5;
 }
-
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
   .eo {
     grid-column: col / span 1 ;
     grid-row: row 4 ;
