--- a/nav.css
+++ b/nav.css
@@ -46,13 +46,13 @@ body {
         cursor: pointer;
     }
     
-    .navul {
+    .nav {
         text-align: right;
         width: 100%;
         display: none;
     }
     
-    .navul a {
+    .nav a {
         display: block;
         margin: 0;
         clear: right;
