--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Sanserif;
+    color: black;
     text-align: right;
     padding-bottom: 20px;
     
