--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: BioRhymeBold; 
-    src: url("BioRhymeExtraBold.ttf");
+    font-family: RobertSlab; 
+    src: url("RobotoSlab-VariableFont_wght.ttf");
 }
 
 @font-face {
@@ -153,7 +153,7 @@ footer {
 .observationheading {
     grid-column: col;
     grid-row: row;
-    font-family: sans-serif;
+    font-family: RobertSlab;
     color: darkgrey;
 }
 
@@ -184,7 +184,7 @@ footer {
 .graphheading {
     grid-column: col;
     grid-row: row 3;
-    font-family: sans-serif;
+    font-family: RobertSlab;
     color: darkgrey;
 }
 
@@ -214,7 +214,7 @@ footer {
 .cejheading {
     grid-column: col;
     grid-row: row 5;
-    font-family: sans-serif;
+    font-family: RobertSlab;
     color: darkgrey;
 }
 
