--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: SpaceMono;
-    src: url("SpaceMonoRegular.ttf");
+    src: url("SpaceMono-BoldItalic.ttf");
 }
 
 @font-face {
