--- a/style.css
+++ b/style.css
@@ -158,6 +158,12 @@ footer {
 }
 
 .iframe-container obs {
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-bottom: 25px;
+    padding: 50px;
+    max-width: 65%;
+    height: auto;
     grid-column: col;
     grid-row: row 2;
 }
