--- a/nav.css
+++ b/nav.css
@@ -36,6 +36,15 @@ body {
     display: block;
 }
 
+label {
+    margin: 0 40px 0 0; 
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px; 
+    float: right;
+}
+
 #toggle {
     display: none;
 }
