--- a/style.css
+++ b/style.css
@@ -136,24 +136,14 @@ footer {
     grid-column: col / span 1 ;
     grid-row: row 5;
   }
-
-.iframe-container {
-    grid-column: col 2 / span 1 ;
+.video {
+    grid-column: col 2;
     grid-row: row 5;
-}
-.iframe-container{
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
-}
-.iframe-container iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    max-width: 75%; 
+    height: auto;
+    margin: 50px;
+    padding: 50px;
+
   .eo {
     grid-column: col / span 1 ;
     grid-row: row 4 ;
