--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ footer {
 
 /*Learn Grid*/
 .observationheading {
-    grid-column: col 
+    grid-column: col; 
     grid-row: row;
     font-family: SpaceMono;
 }
@@ -171,7 +171,11 @@ footer {
     grid-column: col;
     grid-row: row 2;
 }
-
+.observationp {
+    grid-column: col 2;
+    grid-row: 2;
+    }
+    
 .graphheading {
     grid-column: col;
     grid-row: row 3;
@@ -179,43 +183,38 @@ footer {
     color: darkgrey;
 }
 
-.iframe-container gr {
-    grid-column: col / span 1 ;
+.graphvid {
+    max-width: 75%; 
+    height: auto;
+    margin: 50px;
+    padding: 50px;
+    grid-column: col;
     grid-row: row 4;
-}
+
 
 .graphingp {
-    grid-column: col 2 / span 1 ;
+    grid-column: col 2;
     grid-row: row 4;
 }
 
 .cejheading {
-    grid-column: col / span 1;
+    grid-column: col;
     grid-row: row 5;
     font-family: RobertSlab;
     color: darkgrey;
 }
 
-.iframe-container cej {
-    grid-column: col / span 1 ;
+.graphvid {
+    max-width: 75%; 
+    height: auto;
+    margin: 50px;
+    padding: 50px;
+    grid-column: col;
     grid-row: row 6;
-}
-.iframe-container{
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
-}
-.iframe-container iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+
 
 .cejp {
-    grid-column: col 2 / span 1 ;
+    grid-column: col 2;
     grid-row: row 6;
 }
 
