--- a/style.css
+++ b/style.css
@@ -223,6 +223,11 @@ table, th, td {
   border: 1px solid black;
  }
 
+th, td {
+  padding: 15px;
+}
+    
+    
 /*Reflection Grid*/
 
 .workscited {
