--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@
         text-shadow: none !important; 
     }
     
+    body {
+        background: url('background.jpg') no-repeat;
+                background-size: cover; 
+                color: darkgrey;
+    
+    
     .heading {
         margin-bottom: 0;
         border: none;
