--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
         background: url('background.jpg') no-repeat;
                 background-size: cover; 
                 color: darkgrey;
-    
+    }
     
     .heading {
         margin-bottom: 0;
