--- a/nav.css
+++ b/nav.css
@@ -1,5 +1,9 @@
  
-}
+body {
+        background: url('background.jpg') no-repeat;
+                background-size: cover; 
+                color: darkgrey;
+    }
 .nav ul {
     margin: 0px;
     padding: 0px;
