--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ footer {
     background-repeat: no-repeat;
     font-family: Sanserif;
     color: black;
-    text-align: right;
+    text-align: left;
     padding-bottom: 20px;
     
 }
