--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ p, ul {
 
 blockquote {
     font-family: SpaceMono;
+    color: darkgrey;
 }
 
 .heading {
@@ -109,6 +110,7 @@ footer {
     grid-column: col 1;
     grid-row: row 4;
     font-family: SpaceMono;
+color: black;
     margin-right: 50px;
     margin-left: 50px;
 }
