--- a/style.css
+++ b/style.css
@@ -202,13 +202,11 @@ thead {
 }
 
 .observationvid {
-    margin-right: 50px;
-    margin-left: 50px;
-    margin-bottom: 25px;
-    padding: 50px;
-    max-width: 55%;
+    max-width: 75%; 
     height: auto;
-    grid-column: col; 
+    margin: 50px;
+    padding: 50px;
+    grid-column: col;
     grid-row: row 2;
 }
 
@@ -225,14 +223,12 @@ thead {
 }
 
 .graphvid {
-   margin-right: 50px;
-    margin-left: 50px;
-    margin-bottom: 25px;
-    padding: 50px;
-    max-width: 55%;
+    max-width: 75%; 
     height: auto;
-    grid-column: col; 
-    grid-row: row 5;
+    margin: 50px;
+    padding: 50px;
+    grid-column: col;
+    grid-row: row 4;
 }
 
 .graphingp {
@@ -245,6 +241,13 @@ thead {
     grid-row: row 5;
     font-family: RobertSlab;
     color: darkgrey;
+}
+
+.container {
+  position: relative;
+  width: 60%;
+  overflow: hidden;
+  padding-top: 40%; /* 4:3 Aspect Ratio */
 }
 
 .cejp {
