--- a/style.css
+++ b/style.css
@@ -198,10 +198,10 @@ thead {
 .observationheading {
     grid-column: col; 
     grid-row: row;
-    font-family: RobertSlab;
+    font-family: SpaceMono;
 }
 
-.observationvid {
+.observation {
     max-width: 75%; 
     height: auto;
     margin: 50px;
@@ -209,15 +209,14 @@ thead {
     grid-column: col;
     grid-row: row 2;
 }
-
 .observationp {
-    grid-column: col;
-    grid-row: row 3;
+    grid-column: col 2;
+    grid-row: row 2;
     }
-
+    
 .graphheading {
     grid-column: col;
-    grid-row: row 4;
+    grid-row: row 3;
     font-family: RobertSlab;
     color: darkgrey;
 }
@@ -228,17 +227,17 @@ thead {
     margin: 50px;
     padding: 50px;
     grid-column: col;
-    grid-row: row 5;
+    grid-row: row 4;
 
 
 .graphingp {
-    grid-column: col;
-    grid-row: row 6;
+    grid-column: col 2;
+    grid-row: row 4;
 }
 
 .cejheading {
     grid-column: col;
-    grid-row: row 7;
+    grid-row: row 5;
     font-family: RobertSlab;
     color: darkgrey;
 }
@@ -249,12 +248,12 @@ thead {
     margin: 50px;
     padding: 50px;
     grid-column: col;
-    grid-row: row 8;
+    grid-row: row 6;
 
 
 .cejp {
-    grid-column: col;
-    grid-row: row 9;
+    grid-column: col 2;
+    grid-row: row 6;
 }
 
 /*contact Grid*/
